crates/ts-pack-core-ffi/include/ts_pack.h

typedef struct TS_PACKDownloadManager TS_PACKDownloadManager;
typedef struct TS_PACKParserManifest TS_PACKParserManifest;
/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t ts_pack_last_error_code(void);
/**
 * Return the last error message. The pointer is valid until the next FFI call on this thread.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
const char *ts_pack_last_error_context(void);
/**
 * Free a string previously returned by this library.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void ts_pack_free_string(char *ptr);
/**
 * Free a byte buffer previously returned by this library via out-params.
 * `ptr`, `len`, and `cap` must match the values written by the library function,
 * or the call must pass `ptr = null` (in which case it is a no-op).
 * # Safety
 * Pointer must have been returned by this library (via out_ptr / out_len / out_cap
 * out-params), or be null. The len and cap values must be unchanged since the call.
 */
void ts_pack_free_bytes(uint8_t *ptr,
                        uintptr_t len,
                        uintptr_t cap);
/**
 * Ensure all languages in a named group are available.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t ts_pack_download_manager_ensure_group(const TS_PACKDownloadManager *this_,
                                              const char *group);
/**
 * Get the expected path for a language's shared library in the cache.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *ts_pack_download_manager_lib_path(const TS_PACKDownloadManager *this_,
                                        const char *name);
/**
 * Fetch the parser manifest from GitHub Releases.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
TS_PACKParserManifest *ts_pack_download_manager_fetch_manifest(const TS_PACKDownloadManager *this_);
/**
 * Download the platform bundle and extract every library file it contains.
 *
 * Unlike [`ensure_languages`], this does not check the manifest language list
 * against archive contents — it simply extracts all `.so`/`.dylib`/`.dll` files
 * from the bundle. Languages in the manifest that are missing from the archive
 * are silently ignored rather than returning an error.
 *
 * Returns the number of library files extracted (including those already cached).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
uintptr_t ts_pack_download_manager_download_all_best_effort(const TS_PACKDownloadManager *this_);
/**
 * Remove all cached parser libraries.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t ts_pack_download_manager_clean_cache(const TS_PACKDownloadManager *this_);