packages/csharp/TreeSitterLanguagePack/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_ensure_group")]
    internal static extern void DownloadManagerEnsureGroup(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string group
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_lib_path")]
    internal static extern IntPtr DownloadManagerLibPath(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_fetch_manifest")]
    internal static extern IntPtr DownloadManagerFetchManifest(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_download_all_best_effort")]
    internal static extern ulong DownloadManagerDownloadAllBestEffort(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_clean_cache")]
    internal static extern void DownloadManagerCleanCache(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);
}
